# ConvNeXT_image_classification

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
config/: config.yaml
outputs/20260519_225934/checkpoints/: final_metrics.json
outputs/20260519_225934/metrics/: training_history.csv
outputs/metrics/: classification_report.txt  test_metrics.csv  test_metrics.json
outputs/predictions/: test_predictions.csv
src/: test.py  train.py  validate.py
src/datasets/: dataset.py
src/models/: model.py
src/utils/: checkpoint.py  early_stopping.py  logger.py  metrics.py  output_manager.py  plots.py  seed.py
